[package]
name = "resast"
version = "0.6.0-alpha.1"
authors = ["rfm <r.f.masen@gmail.com>"]
edition = "2018"
description = "Rusty-ECMAScript Abstract Syntax Tree"
repository = "https://github.com/FreeMasen/resast"
license = "MIT"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
ressa = "0.7.0-beta-6"
pretty_env_logger = "0.3"

[features]
default = []
serialization = ["serde", "serde_derive"]
esprima = ["serialization"]
